--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/orange_light"
     android:gravity="center_horizontal">
 
     <TextView
@@ -13,10 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:padding="4dp"
         android:layout_weight="2"
-        android:background="#767573"
+        android:background="?attr/colorSecondary"
         android:gravity="center"
+        android:padding="4dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -26,13 +26,14 @@
         android:id="@+id/answer1"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="4dp"
-        android:paddingVertical="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:minWidth="240dip"
         android:paddingHorizontal="32dp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/black"
         android:textSize="20sp"
-        android:textColor="@color/white"
-        android:backgroundTint="#6200EE"
         tools:text="Answer1" />
 
     <Button
@@ -40,12 +41,13 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:backgroundTint="@color/white"
         android:layout_margin="4dp"
+        android:minWidth="240dip"
         android:paddingVertical="16dp"
         android:paddingHorizontal="32dp"
         android:textSize="20sp"
-        android:textColor="@color/white"
-        android:backgroundTint="#6200EE"
+        android:textColor="@color/black"
         tools:text="Answer2" />
 
     <Button
@@ -53,25 +55,27 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_margin="4dp"
+        android:backgroundTint="@color/white"
+        android:minWidth="240dip"
+        android:layout_margin="2dp"
         android:paddingVertical="16dp"
         android:paddingHorizontal="32dp"
         android:textSize="20sp"
-        android:textColor="@color/white"
-        android:backgroundTint="#6200EE"
+        android:textColor="@color/black"
         tools:text="Answer3" />
 
     <Button
         android:id="@+id/answer4"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_margin="2dp"
         android:layout_weight="1"
-        android:layout_margin="4dp"
-        android:paddingVertical="16dp"
+        android:backgroundTint="@color/white"
+        android:minWidth="240dip"
         android:paddingHorizontal="32dp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/black"
         android:textSize="20sp"
-        android:textColor="@color/white"
-        android:backgroundTint="#6200EE"
         tools:text="Answer4" />
 
     <LinearLayout
