--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorSecondary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".ui.welcome.WelcomeFragment">
@@ -12,16 +13,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
-        android:textSize="24sp"
-        android:background="#d2c2fd"
         android:padding="30dp"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textColor="?attr/colorOnSecondary"
+        android:textSize="24sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
         android:text="@string/what_name"
-        android:textSize="20sp"
-        android:layout_margin="24dp"/>
+        android:textColor="?attr/colorOnSurfaceInverse"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/usernameEditText"
@@ -38,6 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:paddingHorizontal="24dp"
+        android:shadowColor="@color/orange_dark"
+        android:shadowDx="@android:dimen/app_icon_size"
+        android:shadowDy="@android:dimen/app_icon_size"
         android:text="@string/play"
         android:textSize="14sp" />
 
