--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,12 @@
     <color name="green">#1B5E20</color>
     <color name="green_dark">#003300</color>
     <color name="green_light">#A5D6A7</color>
-    <color name="blue">#0288D1</color>
-    <color name="blue_dark">#005B9F</color>
-    <color name="blue_light">#81D4FA</color>
+
+    <color name="orange">#E4962A</color>
+    <color name="orange_light">#e9ab54</color>
+    <color name="orange_dark">#9f691d</color>
+
+    <color name="blue">#2a77e4</color>
+    <color name="blue_light">#5492e9</color>
+    <color name="blue_dark">#1d539f</color>
 </resources>
